<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ActivityHomeScreen"
    android:background="@android:color/background_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signup Page"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNewUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="New User Name"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password:"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="New Password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password:"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="Change Email"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/btnChangeUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="Change Username"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="Change Password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="Signup"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
